--- a/IDERA/segmentos.censo2022.rmd
+++ b/IDERA/segmentos.censo2022.rmd
@@ -13,6 +13,10 @@ output:
     fig_caption: true
     reveal_options:
       slideNumber: true
+    includes:
+      in_header: header.html
+      before_body: doc_prefix.html
+      after_body: doc_suffix.html      
   powerpoint_presentation: 
     reference_doc: cac-custom-reference.pptx
     keep_md: true
@@ -37,13 +41,10 @@ subtitle: "Generación de Segmentos Geográficos para el Censo 2022 en áreas ur
   y suburbanas"
 encoding: utf8
 ---
-
 <!-- por acá empieza Vero la resentación -->
-{style="class: center, inverse; background-image: url('plantilla_idera_html/img0.png');"}
+# Introducción{style="class: center, inverse; background-image: url('imagenes/cac-logo.png'); background-opacity:70%"}
 
----------------------------------------------------------------------
-
-# ¿Que es la segmentación?
+## ¿Que es la segmentación?
 
 Son las tareas que permiten subdividir el radio censal en segmentos.
 
@@ -51,7 +52,7 @@ Para asegurar que todas las viviendas sean censadas, hay que determinar qué ár
 
 ------------------------------------------------------------------------
 
-# Tareas: Generar mapas, recorridos, planillas. {.unlisted .unnumbered}
+## Tareas: Generar mapas, recorridos, planillas. {.unlisted .unnumbered}
 
 -   16 millones de domicilios.
 -   De 8 a 12 hs. de trabajo.
@@ -62,7 +63,7 @@ Para asegurar que todas las viviendas sean censadas, hay que determinar qué ár
 
 ------------------------------------------------------------------------
 
-# Descripción del problema.
+## Descripción del problema.
 
 -   Armar el recorrido de 650.000 censistas para que visiten todas las viviendas del territorio siguiendo las reglas definidas en el MANUAL del SEGMENTADOR.
 
