--- a/IDERA/segmentos.censo2022.rmd
+++ b/IDERA/segmentos.censo2022.rmd
@@ -40,17 +40,17 @@ output:
 encoding: utf8
 ---
 
-# Introducción {data-background-image="imagenes/fondo.png"}
+# Introducción {data-background-image="imagenes/fondo.idera.png"}
 <!-- por acá empieza Vero la resentación -->
 "Generación de Segmentos Geográficos en áreas urbanas y suburbanas"
 
-## ¿Que es la segmentación?
+## ¿Que es la segmentación? {data-background-image="imagenes/fondo.idera.png"}
 
 Son las tareas que permiten subdividir el radio censal en segmentos.
 
 Para asegurar que todas las viviendas sean censadas, hay que determinar qué área y qué viviendas le corresponden a cada censista.
 
-## Tareas: Generar mapas, recorridos, planillas. {.unlisted .unnumbered}
+## Tareas: Generar mapas, recorridos, planillas. {data-background-image="imagenes/fondo.idera.png"}
 
 -   16 millones de domicilios.
 -   De 8 a 12 hs. de trabajo.
@@ -59,40 +59,40 @@ Para asegurar que todas las viviendas sean censadas, hay que determinar qué ár
 -   Carga promedio en zona suburbana: 12 a 15 viviendas.
 -   Aprox. 650 mil censistas
 
-## Descripción del problema.
+## Descripción del problema. {data-background-image="imagenes/fondo.idera.png"}
 
 -   Armar el recorrido de 650.000 censistas para que visiten todas las viviendas del territorio siguiendo las reglas definidas en el MANUAL del SEGMENTADOR.
 
-## El problema
+## El problema {data-background-image="imagenes/fondo.idera.png"}
 
 Un problema de optimización, matemáticamente se formula como: Minimizar $f(x)$ sujeto a: $x \in S$, donde $S$ es el conjunto de los valores entre los que podemos buscar la solución, lo que se llama conjunto de soluciones factibles.
 
 En este caso, $S$ es el conjunto de todas las segmentaciones posibles, $x$ es una segmentación y $f(x)$ es el costo de dicha segmentación.
 
-## Función objetivo con costo que incluye penalidad
+## Función objetivo con costo que incluye penalidad {data-background-image="imagenes/fondo.idera.png"}
 
 -   Cantidad de viviendas por segmento
 -   Cantidad de manzanas por segmento
 -   Tipos de ejes que se cruzan
 
-## Delimitación del segmento
+## Delimitación del segmento {data-background-image="imagenes/fondo.idera.png"}
 
 -   Todo espacio (con o sin viviendas) debe estar asignado a un segmento.
 -   Identificar claramente Inicio y Fin de cada segmento.
 
-## Facilitar el recorrido del censista
+## Facilitar el recorrido del censista {data-background-image="imagenes/fondo.idera.png"}
 
-## Evitar
+## Evitar {data-background-image="imagenes/fondo.idera.png"}
 
 -   Recorrido discontinuo
 -   Cruce en diagonal
 -   "En lo posible" cruce de avenidas, rutas, vías de ferrocarril o cursos de agua.
 
-## Segmentos
+## Segmentos {data-background-image="imagenes/fondo.idera.png"}
 
 ![Mapas de análisis](imagenes/mapa.png){width="90%"}
 
-# Tipos de Radios
+# Tipos de Radios {data-background-image="imagenes/fondo.idera.png"}
 
 -   Urbano:
 
@@ -108,37 +108,37 @@ En este caso, $S$ es el conjunto de todas las segmentaciones posibles, $x$ es un
 **Suburbano:** agrupada en pequeños poblados o en bordes amanzanados de localidades.
 :::
 
-## Radios Urbanos o parte Urbana de Radios Mixtos
+## Radios Urbanos o parte Urbana de Radios Mixtos {data-background-image="imagenes/fondo.idera.png"}
 
-## Según distribución de viviendas dada una carga deseada.
+## Según distribución de viviendas dada una carga deseada. {data-background-image="imagenes/fondo.idera.png"}
 
 -   Esparcidos: todos los lados con pocas viviendas.
 -   Densos: todas las manzanas con muchas viviendas.
 -   Combinados: situaciones intermedias, algunas manzanas con pocas viviendas o algunos lados con muchas viviendas.
 
-# Generación de segmentaciones vecinas
+# Generación de segmentaciones vecinas {data-background-image="imagenes/fondo.idera.png"}
 
 ------------------------------------------------------------------------
-
+{data-background-image="imagenes/fondo.idera.png"}
 ![Extraer componente](imagenes/extraer.png){width="90%"}
 
 ------------------------------------------------------------------------
-
+{data-background-image="imagenes/fondo.idera.png"}
 ![Transferir componente](imagenes/transferir.png){width="90%"}
 
 ------------------------------------------------------------------------
-
+{data-background-image="imagenes/fondo.idera.png"}
 ![Fusionar componente](imagenes/fusionar.png){width="90%"}
 
-# Optimización global
+# Optimización global {data-background-image="imagenes/fondo.idera.png"}
 
 ![Espacio de soluciones](imagenes/optimizacion_global.png){width="90%"}
 
-## Espacio factible definido por vecindario de segmentación
+## Espacio factible definido por vecindario de segmentación {data-background-image="imagenes/fondo.idera.png"}
 
 ![Optimización Discreta](imagenes/optimizacion_discreta.png){width="75%"}
 
-## Vecinos se calculan con operaciones elementales
+## Vecinos se calculan con operaciones elementales {data-background-image="imagenes/fondo.idera.png"}
 
 1.  Extraer componente (manzana o lado) de segmento
 
@@ -146,9 +146,9 @@ En este caso, $S$ es el conjunto de todas las segmentaciones posibles, $x$ es un
 
 3.  Fusionar 2 segmentos
 
-# Algoritmos
+# Algoritmos {data-background-image="imagenes/fondo.idera.png"}
 
-## Algoritmo para radios esparcidos (lados completos)
+## Algoritmo para radios esparcidos (lados completos) {data-background-image="imagenes/fondo.idera.png"}
 
 1.  Tomar una segmentación inicial y hacer que sea la actual
 2.  Calcular todas las segmentaciones vecinas a la actual y elejir una de costo mínimo
@@ -162,120 +162,120 @@ En este caso, $S$ es el conjunto de todas las segmentaciones posibles, $x$ es un
 3.  Calcular la cantidad de viviendas por segmento en la manzana $m$, $s_m = v_m / d_m$
 4.  Segmentar el listado de la manzana $m$ cortando a pisos enteros, avanzando con segmentos de cantidad de viviendas lo más cercano a $s_m$ posible
 
-## Algoritmo para radios combinados
+## Algoritmo para radios combinados {data-background-image="imagenes/fondo.idera.png"}
 
 1.  Aplicar el algoritmo para radios esparcidos (lados completos)
 2.  Para todos los segmentos que superen un valor umbral de viviendas aplicar algoritmo de (listado) manzana independiente
 3.  Juntar segmentos con cero o pocas viviendas
 
-# Numeración de los segmentos
+# Numeración de los segmentos {data-background-image="imagenes/fondo.idera.png"}
 
 -   Cada segmento del radio urbano se identifica con un número de dos dígitos, de 01 en más, dentro del radio.
 -   En el área urbana del radio mixto los segmentos se numeran del 60 en más excluyendo al 90.
 -   El segmento 90 contiene las viviendas colectivas del radio.
 
-# Carga de datos
+# Carga de datos {data-background-image="imagenes/fondo.idera.png"}
 
 ![Carga de Datos](imagenes/DTL.png){height="70%"}
 
 
-## Procesamiento de Datos
+## Procesamiento de Datos {data-background-image="imagenes/fondo.idera.png"}
 
 ![ETL](imagenes/ETL.png){height="90%"}
 
-# Elementos disponibles, o agrupación elemental.
+# Elementos disponibles, o agrupación elemental. {data-background-image="imagenes/fondo.idera.png"}
 
 -   Conteos: lados o manzanas completas
 -   Listados: direcciones, pisos (no puede haber más de 1 segmento por piso) recorridos o manzanas independientes
 -   Varias combinaciones de ambos.
 
-# Software utilizado
+# Software utilizado {data-background-image="imagenes/fondo.idera.png"}
 
 ![](imagenes/amigos.png){width="90%"}
 
-## Segmentación.
+## Segmentación. {data-background-image="imagenes/fondo.idera.png"}
 
 ![Parámetros](imagenes/SP.png){width="90%"}
 
-# Generación de resumenes.
+# Generación de resumenes. {data-background-image="imagenes/fondo.idera.png"}
 
 ![Resumen R3](imagenes/R3.png){width="90%"}
 
-## Estructura de Base de Datos
+## Estructura de Base de Datos {data-background-image="imagenes/fondo.idera.png"}
 
 ![](imagenes/BD.png){width="90%"}
 
-# Tipos de radios
+# Tipos de radios {data-background-image="imagenes/fondo.idera.png"}
 
-## Radios Urbanos
+## Radios Urbanos {data-background-image="imagenes/fondo.idera.png"}
 
 ![](imagenes/RU.png){width="90%"}
 
-## Radios Suburbanos
+## Radios Suburbanos {data-background-image="imagenes/fondo.idera.png"}
 
 ![](imagenes/RSU.png){width="90%"}
 
-## Segmentación de 1 Radio que compartido con 5 localidades
+## Segmentación de 1 Radio que compartido con 5 localidades {data-background-image="imagenes/fondo.idera.png"}
 
 ![](imagenes/R5L.png){width="90%"}
 
-# Resumen de la segmentación
+# Resumen de la segmentación {data-background-image="imagenes/fondo.idera.png"}
 
 ![](imagenes/resumen.png){width="90%"}
 
-## Previsualización de la segmentación y de grafo
+## Previsualización de la segmentación y de grafo {data-background-image="imagenes/fondo.idera.png"}
 
 ![](imagenes/SegG.png){width="90%"}
 
-# Salidas Gráficas.
+# Salidas Gráficas. {data-background-image="imagenes/fondo.idera.png"}
 
 ![](imagenes/plugin.png){width="100%"}
 
-## QGIS Buenos Aires 
+## QGIS Buenos Aires {data-background-image="imagenes/fondo.idera.png"}
 
 [Descargar QGIS](https://www.qgis.org)
 
 ![Nueva versión](imagenes/QGIS.png){width="100%"}
 
-## Espacio de trabajo QGIS
+## Espacio de trabajo QGIS {data-background-image="imagenes/fondo.idera.png"}
 
 ![Mapa Fracción](imagenes/SG_fraccion.png){width="100%"}
 
-## Mapas de Fracción
+## Mapas de Fracción {data-background-image="imagenes/fondo.idera.png"}
 
 ![](imagenes/MF.png){width="100%"}
 
-## Mapas de Radio
+## Mapas de Radio {data-background-image="imagenes/fondo.idera.png"}
 
 ![](imagenes/MR.png){width="100%"}
 
-## Mapas de Segmento
+## Mapas de Segmento {data-background-image="imagenes/fondo.idera.png"}
 
 ![](imagenes/MS.png){width="100%"}
 
-# Conclusiones.
+# Conclusiones. {data-background-image="imagenes/fondo.idera.png"}
 
 -   Pudimos resolver un problema complicado con algoritmos sencillos
 -   Creamos una interface para la carga de datos y procesamiento de la segmentación
 -   Creamos un plugin para la automatización de salidas gráficas y recorridos
 -   Optimizamos tiempo y recursos para el armado de material de campo
 
-## Optmización de recursos
+## Optmización de recursos {data-background-image="imagenes/fondo.idera.png"}
 
 -   Se redujo el tiempo de armado e impresión de mapas
 -   Se utilizó el complemento atlas para automatizar el armado de los mapas para censistas, jefes de radio, fracción, departamento y la planilla R3 de recorrido del censista
 -   Se informatizó y masificó la distribución de planos utilizando formato digital (.pdf .png)
 -   Se fomentó el uso de herramientas de software libre, QGIS
 
-# Gracias.
+# Gracias. {data-background-image="imagenes/fondo.idera.png"}
 
 ![](imagenes/colaboradores.png){width="100%"}
 
-## Preguntas {data-background-image="imagenes/fondo.png"}
+## Preguntas {data-background-image="imagenes/fondo.idera.png"}
 
 ### ?
 
-## Contacto {data-background-gradient="linear-gradient(to bottom, #283b95, #17b2c3)"}
+## Contacto {data-background-image="imagenes/fondo.idera.png"}
 
 Hernán [halperin\@indec.gob.ar](mailto:halperin@indec.gob.ar){.email}
 
